Closed Bug 639176 Opened 15 years ago Closed 15 years ago

TI: send inference failures to stderr instead of stdout

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

Details

(Whiteboard: fixed-in-jaegermonkey)

Attachments

(1 file)

Attached patch PatchSplinter Review
Trivial patch, helps fuzzing and seems the right thing.
Attachment #517138 - Flags: review?(bhackett1024)
Attachment #517138 - Flags: review?(bhackett1024) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: