[INFER] Use stderr instead of stdout for inference failures, bug 639176. r=bhackett